2010-06-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectManager.m(-openProjectAt:makeActive:):
	Prevent a crash when opening a subproject by not creating a new
	project window for the subproject. This window is immediately
	released again when the new project's super project is set anyway.

	* Framework/PCProjectManager.m(-closeAllProjects): Fix bug where
	PC would not quit after opening a subproject due to a bogus
	enumerator loop.

2010-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectWindow.m (-dealloc):
	* Modules/Editors/ProjectCenter/PCEditor.m (-dealloc):
	Attempt to prevent crashes when a project is closed by ensuring
	that project and editor windows are closed before their owners are
	deallocated.

2010-06-04 Riccardo Mottola <rmottola@users.sf.net>

	* TextFinder.m:
	check before replacing and allow undo (by Wolfgang Lux)

2010-06-03 Riccardo Mottola <rmottola@users.sf.net>

	* Headers/Protocols/CodeEditorView.h:
	Declare new view protocol

	* Modules/Editors/ProjectCenter/PCEditorView.h
	* Modules/Editors/ProjectCenter/PCEditorView.m:
	Conform to CodeEditorView protocol and add accessor to the editor.

	* Framework/PCProjectWindow.m:
	Return the view's editor undo manager.

	* Modules/Preferences/Misc/PCMiscPrefs.m:
	declare strintg constants with @

2010-06-01 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Editors\ProjectCenter\PCEditor.m,
	* Modules\Editors\ProjectCenter\PCEditor.m:
	keep an undoManager for the Editor and return that to the window

2010-05-30 03:42-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/main.m: Same as below.

2010-05-30 03:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Projects/Application/Resources/AppController.h
	* Modules/Projects/Application/Resources/AppController.m
	* Modules/Projects/Tool/Resources/main.m: Remove licensing
	and copyright information from these since we don't want to 